# Portfolio

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  example_usage.py  main.py  poc.ipynb  portfolio.csv  pyproject.toml  redis_test_docker.ipynb  redis_test_local.ipynb  requirements.txt  test.ipynb  x.ipynb  x.py
data/: _full_portfolio copy.csv  full_portfolio.csv  full_transaction_history.csv  subscriptions.csv  tx_subscriptions.csv
src/: __init__.py  constants.py  evaluation.py  utils.py
src/app/: api.py  task_queue.py  tasks.py  worker.py
src/assessments/: __init__.py  annualized_returns.py  base_assessment.py  benchmark_correlation.py  beta.py  cagr.py  calmar_ratio.py  correlation.py  cumulative_returns.py  cvar.py  down_capture.py  information_ratio.py  jensens_alpha.py  kurtosis.py  m2_ratio.py  max_drawdown.py  mean_return.py  omega_ratio.py  r_squared.py  semi_variance.py  sharpe_ratio.py  skewness.py  sortino_ratio.py  tracking_error.py  treynor_ratio.py  ulcer_index.py  up_capture.py  var.py  volatility.py
src/assessments/ratios/: calmar_ratio.py  information_ratio.py  sharpe_ratio.py  sortino_ratio.py  treynor_ratio.py
src/dataclasses/: assessment.py  assessment_config.py  assessment_results.py  holdings.py  portfolio.py  prices.py  results.py  subscriptions.py  ticker.py  transactions.py
src/utils/: defaults.py  executor.py  executors.py  timer.py
tests/: conftest.py
tests/unit/: test_api.py  test_evaluation.py  test_executors.py  test_tasks.py
tests/unit/assessments/: test_beta.py  test_cagr.py  (+23 more)
