[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "rq>=2.6.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
    "yahooquery>=2.4.1",
    "yfinance>=0.2.66",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore"]

[tool.ruff]
exclude = ["*.ipynb"]

